--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ms": "^2.1.2"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.36.1",
     "np": "^8.0.2",
     "prettier-standard": "^15.0.1",
     "standard": "^14.3.1"
